# py-template-ruff

./: .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  run_me.py  tox.ini
.devcontainer/: Dockerfile
